# ustr

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  add-target.cmake  add_target.cmake  config.cmake  install.cmake
images/: logo.vectornator
scripts/: add-target.cmake  arg-type.cmake  cache.cmake  config.cmake  install.cmake  util.cmake
src/ustr/: all.h  char.c  char.h  char_t.h  config.h.in  cstr.c  cstr.h  cview.c  cview.h  cview_t.h  encoding.c  encoding.h  encoding_t.h  endian.c  endian.h  endian_t.h  io.c  io.h  mem.c  mem.h  str.c  str.h  str_t.h  types.h  view.c  view.h  view_t.h
src/ustr/fmt/: all.h  bool.c  bool.h  case.c  case.h  char.c  char.h  enum.c  enum.h  float.c  float.h  fmt.c  fmt.h  int.c  int.h  plus.c  plus.h  radix.c  radix.h  str.c  str.h  type.c  type.h
src/ustr/type/: all.h  attr.h  char.h  cview.h  encoding.h  endian.h  str.h  view.h
src/ustr/type/fmt/: all.h  case.h  enum.h  float.h  fmt.h  int.h  plus.h  radix.h  type.h
src/ustr/type/util/: all.h  endian.h  mem.h  write.h
src/ustr/util/: all.h  bit.c  bit.h  endian.c  endian.h  export.h  math.h  mem.c  mem.h  name.h
